<resources>
    <string name="app_name">Smart Home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="house_garage">House Garage</string>
    <string name="house_temp">House Temperature</string>
    <string name="house_weather">House Weather</string>
     <string name="house_garagedoor">Garage Door</string>
    <string name="garageLight">Garage Light</string>
    <string name="house_add">ADD</string>
    <string name="house_toolbar">Tool Bar</string>
    <string name="house_Save">Save</string>
   <string name="Living_Room">Living Room</string>
    <string name="Kitchen">Kitchen</string>
    <string name="Automobile">Automobile</string>
    <string name="House_Help">House Help</string>
    <string name="house_changetemprature">Change the house temperature</string>
    <string name="house_delete">Delete</string>
    <string name="house_timeinput">Input the time</string>
    <string name="house_tempinput">Input the temperature</string>
    <string name="house_currenttemp">Current Temperature</string>
    <string name="house_mintemp">Min Temperature</string>
    <string name="house_maxtemp">Max Temperature</string>
    <string name="house_introduction">Introduction</string>
    <string name="house__garage_text1">Click to open/close garage door</string>
    <string name="house__garage_text2">Click to turn on/off light</string>
    <string name="house_dialog_title">Edit Temperature</string>
    <string name="house_dialog_text">Update Temperature</string>
    <string name="house_toolbar_title">My House</string>
    <string name="house_ok">OK</string>
   <string name="house_dooropen">Door Opened</string>
   <string name="house_doorclose">Door Closed</string>
   <string name="house_lightopen">Light On</string>
   <string name="house_lightclose">Light Off</string>
    <string name="house_datasave">Data Saved</string>
    <string name="house_introductiondetail">


        \nAuthor: Boyang\n\n
         Version: 1.0\n\n\n
       House Garage:\n\n

          Garage door\n
              open/close the garage door\n

           Open garage door also turn on garage light.\n
           Close garage door also turn off the garage light.\n\n

          Garage light\n
               turn on/off the garage light\n\n\n


        House Temperature:\n\n

         Click the text box,input the time and temperature \n
         then click Add button to show them on the list \n\n

         Click the list to edit the  temperature with no time change \n\n\n

        House Weather:\n
        Click on to show outside temperature and weather

    </string>
    <string name="lr_help_title">Welcome to Living Room V1.0</string>
    <string name="lr_help_message">Author: Sizhe Chen \n\nThere are three types of devices: lamp, TV and window blinds. There are three types of lamps: simple lamp, dimmable lamp and smart lamp.\n\nClick Add button to add a new device.\nClick any device in the list to change the settings.\nClick Save or Delete button to save the new setting and delete the device.\nThe most frequently used device will be on the top of the list.\n\nThank you for using smart living room!
     </string>
    <string name="lr_help">Living Room Help</string>
    <string name="lr_list_add">ADD</string>
    <string name="lr_list_details_content_title">Create New Device</string>
    <string name="lr_add_device_name_label">Device Name</string>
    <string name="lr_add_device_category_label">Device Category</string>
    <string name="lr_list_details_content_submit">SUBMIT</string>
    <string-array name="lr_category_arrays">
        <item>Simple Lamp</item>
        <item>Dimmable Lamp</item>
        <item>Smart Lamp</item>
        <item>Television</item>
        <item>Window Blinds</item>
    </string-array>
    <string name="lr_smart_lamp_color">Color</string>
    <string name="lr_simple_lamp_name">Simple Lamp</string>
    <string name="lr_simple_lamp_switch">Lamp Switch</string>
    <string name="lr_dimmable_lamp_name">Dimmable Lamp</string>
    <string name="lr_dimmable_lamp_brightness_label">Brightness</string>
    <string name="lr_dimmable_lamp_seekBar_value">0</string>
    <string name="lr_smart_lamp_name">Smart Lamp</string>
    <string name="lr_smart_lamp_seekBar_value">0</string>
    <string name="lr_smart_lamp_brightness">Brightness</string>
    <string name="lr_blinds_name">Window Blinds</string>
    <string name="lr_blinds_brightness_label">Brightness</string>
    <string name="lr_blinds_seekBar_value">0</string>
    <string name="lr_tv_name">Television</string>
    <string name="lr_tv_switch">TV Switch</string>
    <string name="lr_tv_volume">Volume</string>
    <string name="lr_tv_seekBar_value">0</string>
    <string name="lr_tv_channel">Channel</string>
    <string name="lr_tv_channel_seekBar_value">0</string>
    <string name="lr_tv_up_button">U</string>
    <string name="lr_tv_left_button">L</string>
    <string name="lr_tv_mute_button">Mute</string>
    <string name="lr_tv_right_button">R</string>
    <string name="lr_tv_down_button">D</string>
    <string name="lr_toolbar_title">Living Room</string>
    <string name="lr_save">SAVE</string>
    <string name="lr_delete">DELETE</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update_message">Congrats! Update succeeded!</string>
    <string name="delete_confirm_message">Are you sure you want to delete this item?</string>
    <string name="delete_message">Delete succeeded!</string>
    <string name="save_message">A new item created!</string>
    <string name="title_activity_kitchen_main">My Kitchen</string>
    <string name="title_toolbar_kitchen_car">Automobile</string>
    <string name="title_toolbar_kitchen_house">House Setting</string>
    <string name="title_toolbar_kitchen_living">Living Room</string>
    <string name="dialog_positive_text_ok">OK</string>
    <string name="dialog_negative_text_cancel">Cancel</string>
    <string name="button_add_appliance_text">ADD</string>
    <string name="spinner_add_appliance_prompt">Please choose an appliance</string>
    <string-array name="spinner_appliance_arrays">
        <item>Oven</item>
        <item>Dish Washer</item>
        <item>Toaster</item>
    </string-array>
    <string name="title_activity_kitchen_light_detail">Main light</string>
    <string name="title_activity_kitchen_fridge_detail">Fridge</string>
    <string name="title_activity_kitchen_microwave_detail">Microwave</string>
    <string name="title_activity_kitchen_base">KitchenBase</string>
    <string name="kitchen_light_dimmer_button_text">Set Dimmer</string>
    <string name="kitchen_light_dimmer_section_text">Dimmer</string>
    <string name="kitchen_light_main_switch_section_text">Main Switch</string>
    <string name="kitchen_main_add_appliance_dialog_warning_msg">Please enter an appliance name.</string>
    <string name="kitchen_main_add_appliance_dialog_title">Add Appliance</string>
    <string name="kitchen_light_delete_appliance_dialog_message">Do you want to delete </string>
    <string name="kitchen_light_delete_appliance_dialog_title">Confirm Delete Light</string>
    <string name="kitchen_fridge_delete_appliance_dialog_title">Confirm Delete Fridge</string>
    <string name="kitchen_microwave_delete_appliance_dialog_title">Confirm Delete Microwave Oven</string>
    <string name="kitchen_microwave_start_button_text">Start</string>
    <string name="kitchen_microwave_resume_button_text">Resume</string>
    <string name="kitchen_microwave_stop_button_text">Stop</string>
    <string name="kitchen_microwave_reset_button_text">Reset</string>
    <string name="kitchen_toobar_welcome_text">Welcome to Smart Home Kitchen Setting</string>
    <string name="kitchen_toolbar_instructon_text">Click the appliance you wish to modify the setting.
                                                   Set the Ceiling light brightness, the fridge and freezer temperature, the microwave cooking time as you desire.
                                                   Version 1.0 by Qiuju Zhu.</string>
    <string name="kitchen_toolbar_ok">OK</string>
    <string name="kitchen_fridge_instruction">Set the fridge and freezer temperature. Version 1.0 by Qiuju Zhu.</string>
    <string name="kitchen_light_instruction">Click the switch to turn on/off the kitchen main light. Slide or enter to set the dimmer as you wish. Version 1.0 by Qiuju Zhu.</string>
    <string name="kitchen_microwave_instruction">Set the microwave cooking time. You are able to start, stop or reset the time.Version 1.0 by Qiuju Zhu.</string>
    <string name="kitchen_fridge_temp">Fridge Temperature (°C)</string>
    <string name="kitchen_freezer_temp">Freezer Temperature (°C)</string>
    <string name="kitchen_delete">Delete</string>
    <string name="kitchen_microwave">Microwave Oven</string>
    <string name="kitchen_refrigerator">Refrigerator</string>
    <string name="kitchen_light">Light</string>
    <string name="kitchen_on">Switch is On</string>
    <string name="kitchen_off">Switch is Off</string>
    <string name="kitchen_dimmer">Dimmer level saved</string>
    <string name="kitchen_about">About</string>
    <string name="GarageDoor"></string>
</resources>