<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >




    <item
        android:id="@+id/living"
        android:title="@string/Living_Room"
        android:icon="@drawable/livingroom1"
        app:showAsAction="always"
        android:orderInCategory="200"/>
    <item
        android:id="@+id/kitchen"
        android:title="@string/Kitchen"
        android:icon="@drawable/kitchen1"
        app:showAsAction="always"
        android:orderInCategory="300"
        />


    <item
        android:id="@+id/car"
        android:title="@string/Automobile"
        app:showAsAction="always"
        android:icon="@drawable/car1"
        android:orderInCategory="400"
        />

    <item
        android:id="@+id/househelp"
        android:title="@string/House_Help"
        app:showAsAction="never"
        android:icon="@drawable/help"

        />

</menu>
