<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/lr_simple_lamp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="70dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/lr_simple_lamp_name" />

    <Switch
        android:id="@+id/lr_simple_lamp_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lr_simple_lamp_name"
        android:height="50dp"
        android:text="@string/lr_simple_lamp_switch"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/lr_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lr_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lr_delete" />

    <Button
        android:id="@+id/lr_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lr_delete"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>

