<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lr_dimmable_lamp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="70dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/lr_dimmable_lamp_name" />

    <TextView
        android:id="@+id/lr_dimmable_lamp_brightness_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lr_dimmable_lamp_name"
        android:minHeight="50dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/lr_dimmable_lamp_brightness_label" />

    <SeekBar
        android:id="@+id/lr_dimmable_lamp_seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lr_dimmable_lamp_brightness_label"
        android:layout_below="@+id/lr_dimmable_lamp_name"
        android:minHeight="30dp"
        android:layout_alignBottom="@+id/lr_dimmable_lamp_brightness_label" />

    <TextView
        android:id="@+id/lr_dimmable_lamp_seekBar_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lr_dimmable_lamp_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/lr_dimmable_lamp_seekBar_value"
        android:textSize="24sp" />

    <Button
        android:id="@+id/lr_dimmable_lamp_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lr_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/lr_dimmable_lamp_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lr_dimmable_lamp_save"
        android:layout_weight="1"
        android:text="@string/lr_delete" />

</RelativeLayout>