<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lr_smart_lamp_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:minHeight="70dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/lr_smart_lamp_name" />

    <TextView
        android:id="@+id/lr_smart_lamp_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lr_smart_lamp_name"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/lr_smart_lamp_brightness"
        android:textSize="18sp" />



    <SeekBar
        android:id="@+id/lr_smart_lamp_seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lr_smart_lamp_name"
        android:layout_toEndOf="@+id/lr_smart_lamp_brightness"
        android:layout_toStartOf="@+id/lr_smart_lamp_seekBar_value"
        android:minHeight="50dp" />

    <TextView
        android:id="@+id/lr_smart_lamp_seekBar_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lr_smart_lamp_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/lr_smart_lamp_seekBar_value"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lr_smart_lamp_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lr_smart_lamp_brightness"
        android:layout_alignParentStart="true"
        android:layout_marginRight="52dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/lr_smart_lamp_color"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/lr_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lr_smart_lamp_seekBar"
        android:layout_toEndOf="@+id/lr_smart_lamp_color"
        android:entries="@array/lr_smart_lamp_color"
        android:minHeight="50dp"/>

    <Button
        android:id="@+id/lr_smart_lamp_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/lr_save" />

    <Button
        android:id="@+id/lr_smart_lamp_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lr_smart_lamp_save"
        android:layout_weight="1"
        android:text="@string/lr_delete" />



</RelativeLayout>