<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lr_list_details_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:minHeight="70dp"
        android:text="@string/lr_list_details_content_title"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lr_add_device_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lr_list_details_content_title"
        android:layout_alignParentStart="true"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/lr_add_device_name_label"
        android:paddingLeft="10dp"/>

    <EditText
        android:id="@+id/lr_add_device_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lr_list_details_content_title"
        android:layout_toEndOf="@+id/lr_add_device_category_label"
        android:gravity="bottom|left"
        android:inputType="textPersonName"
        android:minHeight="40dp"
        android:layout_above="@+id/lr_add_device_category_label" />

    <TextView
        android:id="@+id/lr_add_device_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lr_add_device_name_label"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:minHeight="50dp"
        android:text="@string/lr_add_device_category_label"
        android:paddingLeft="10dp"/>

    <Spinner
        android:id="@+id/lr_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/lr_add_device_category_label"
        android:entries="@array/lr_category_arrays"
        android:minHeight="40dp"
        android:layout_alignTop="@+id/lr_add_device_category_label"
        android:layout_alignBottom="@+id/lr_add_device_category_label" />

    <Button
        android:text="@string/lr_list_details_content_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lr_list_details_content_submit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:elevation="1dp" />

</RelativeLayout>