<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_housesetting_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.bo.smarthome.HousesettingDetail">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@android:color/holo_green_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    </android.support.v7.widget.Toolbar>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/houselistview"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/housegarage"


        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_garage"
        android:id="@+id/housegarage"
        android:background="#ffffff"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_temp"
        android:id="@+id/housetemp"
        android:background="#ffffff"

        android:textColor="#000000"
        android:layout_toEndOf="@+id/housegarage"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_weather"
        android:id="@+id/houseweather"
        android:background="#ffffff"
        android:textColor="#000000"
        android:layout_toEndOf="@+id/housetemp"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
