<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bo.smarthome.KitchenFridgeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnDeleteKitchenFridge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/kitchen_delete" />

        <TextView
            android:id="@+id/txtSpinnerFridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="33dp"
            android:text="@string/kitchen_fridge_temp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/txtSpinnerFreezer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtSpinnerFridge"
            android:layout_below="@+id/txtSpinnerFridge"
            android:layout_marginTop="50dp"
            android:text="@string/kitchen_freezer_temp" />

        <Spinner
            android:id="@+id/spnFridgeTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtSpinnerFridge"
            android:layout_marginStart="33dp"
            android:layout_toEndOf="@+id/txtSpinnerFridge" />

        <Spinner
            android:id="@+id/spnFreezerTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/spnFridgeTemp"
            android:layout_alignTop="@+id/txtSpinnerFreezer" />

    </RelativeLayout>
</FrameLayout>
